[gd_scene load_steps=4 format=3 uid="uid://ddsas1vp7q8r3"]

[ext_resource type="Script" path="res://scenes/entities/bomb_launcher/bomb_launcher.gd" id="1_3kcbw"]
[ext_resource type="PackedScene" uid="uid://c6jnc4oaaou4u" path="res://scenes/entities/bomb_launcher/bomb_projectile/bomb_projectile.tscn" id="2_if175"]
[ext_resource type="PackedScene" uid="uid://xltnp3wd2u01" path="res://scenes/entities/targeting_system/targeting_system.tscn" id="2_xgeid"]

[node name="BombLauncher" type="Node2D"]
script = ExtResource("1_3kcbw")
bomb_projectile = ExtResource("2_if175")
launch_interval = 0.5
time_before_detonation = 1.0

[node name="TargetingSystem" parent="." instance=ExtResource("2_xgeid")]

[node name="ProjectileContainer" type="Node" parent="."]

[node name="LaunchIntervalTimer" type="Timer" parent="."]
one_shot = true

[connection signal="target_detected" from="TargetingSystem" to="." method="_on_targeting_system_target_detected"]
[connection signal="target_interacted" from="TargetingSystem" to="." method="_on_targeting_system_target_interacted"]
[connection signal="target_lost" from="TargetingSystem" to="." method="_on_targeting_system_target_lost"]
